# authz-service

./: .gitignore  Makefile  NEXT_STEPS.txt  README.md  audit.jsonl  docker-compose.yml
.github/workflows/: tests.yml
backend/: pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: authorize.py  errors.py  middleware.py
backend/src/app/domain/: audit.py  evaluator.py  policy.py  policy_loader.py  types.py
backend/src/app/schemas/: authorize.py
backend/src/app/services/: audit_sink.py  policy_provider.py
backend/tests/: test_healthz.py
backend/tests/api/: test_authorize_api.py  test_correlation_id.py  test_structured_errors.py
backend/tests/domain/: test_evaluator.py  test_policy_loader.py
backend/tests/services/: test_audit_sink.py  test_policy_provider.py
policies/: sample_policy.json
scripts/: demo_authorize.sh  smoke.sh
